# WeTogether

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/client-desktop/: CMakeLists.txt
apps/client-desktop/src/: main.cpp
client/: .gitignore  CMakeLists.txt  CMakePresets.json
client/apps/client-desktop/: CMakeLists.txt
client/apps/client-desktop/src/: main.cpp
client/build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
client/build-mingw/.cmake/api/v1/reply/: codemodel-v2-2c2966416ae22b2e1292.json  directory-libs.network-Debug-69fd24e18f50e92ba8be.json  directory-libs.plugin-sdk-Debug-361800b9440d230dade8.json  directory-libs.stores-Debug-5458355239614d3e05b2.json  index-2025-07-27T03-00-43-0034.json  target-chat-Debug-fb2aeb4a5eda8ebdb841.json  target-client-desktop-Debug-7174a9fce95db45904a8.json  target-client-desktop_autogen_timestamp_deps-Debug-ebee189ff471950a489a.json  (+13 more)
client/build-mingw/.cmake/api/v1/reply.prev/: cache-v2-9f6fd425c39bc1054a23.json  cmakeFiles-v1-14ef8c916ace59acafc0.json  codemodel-v2-d5f8bf6c2b450bc73989.json  directory-apps.client-desktop-Debug-91368441632d85d8df1e.json  directory-plugins.chat-Debug-f0f5ca5f0f7946746040.json  index-2025-07-26T10-34-22-0425.json  target-chat_autogen-Debug-9bd3a61c1625dddac885.json  target-chat_autogen_timestamp_deps-Debug-c259bb1c94dd8a55ac9b.json  target-client-desktop-Debug-63ac4ce127e3d91a31ab.json  target-client-desktop_autogen-Debug-fb3b2c051a8085919bbd.json  target-core-Debug-2fde9203b8b5ba58346f.json  target-network-Debug-5cc0737b9d9a617e1e69.json  target-plugin-sdk-Debug-3dfe5c00c2a30f13b72b.json  target-stores-Debug-d27362cb93ef784a1637.json  target-tst_core-Debug-8833a5e650955b2c23f4.json  target-tst_core_autogen_timestamp_deps-Debug-ec51ed05fe73d9c9e674.json  target-tst_login_flow-Debug-cbc3301dfbe68e230c17.json  target-tst_login_flow_autogen-Debug-80f4ff8429139e70f6b0.json  target-tst_login_flow_autogen_timestamp_deps-Debug-0ecb6480941dca30347c.json  target-tst_stores-Debug-6aa6357c0970dba1afe0.json  target-tst_stores_autogen-Debug-27b10c2504d098b6bf4d.json  target-ui-Debug-838e10aae52269bdd4fc.json
client/build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
client/build-mingw/.qtc_clangd/: compile_commands.json
client/build-mingw/apps/: cmake_install.cmake
client/build-mingw/apps/client-desktop/: cmake_install.cmake
client/build-mingw/apps/client-desktop/client-desktop_autogen/: deps
client/build-mingw/libs/: cmake_install.cmake
client/build-mingw/libs/core/: cmake_install.cmake
client/build-mingw/libs/core/core_autogen/: deps
client/build-mingw/libs/network/: cmake_install.cmake
client/build-mingw/libs/network/network_autogen/: deps  moc_predefs.h
client/build-mingw/libs/plugin-sdk/: cmake_install.cmake
client/build-mingw/libs/plugin-sdk/plugin-sdk_autogen/: deps
client/build-mingw/libs/stores/: cmake_install.cmake
client/build-mingw/libs/stores/stores_autogen/: deps
client/build-mingw/libs/ui/: cmake_install.cmake
client/build-mingw/libs/ui/ui_autogen/: deps
client/build-mingw/plugins/: cmake_install.cmake
client/build-mingw/plugins/chat/: chat_init.cpp  cmake_install.cmake
client/build-mingw/plugins/chat/ChatPlugin_autogen/: deps  moc_predefs.h
client/build-mingw/plugins/chat/chat_autogen/: deps  moc_predefs.h
client/build-mingw/tests/: CTestTestfile.cmake  cmake_install.cmake
client/build-mingw/tests/integration/: CTestTestfile.cmake  cmake_install.cmake
client/build-mingw/tests/integration/tst_login_flow_autogen/: deps  moc_predefs.h
client/build-mingw/tests/tst_events_autogen/: deps  moc_predefs.h
client/build-mingw/tests/unit/: CTestTestfile.cmake  cmake_install.cmake
client/build-mingw/tests/unit/tst_core_autogen/: deps  moc_predefs.h
client/build-mingw/tests/unit/tst_stores_autogen/: deps
client/cmake/presets/: win64-mingw.json
client/docs/: CMakeLists.txt
client/libs/: CMakeLists.txt
client/libs/core/: CMakeLists.txt
client/libs/network/: CMakeLists.txt
client/libs/network/include/network/: api_client.h
client/libs/network/src/: api_client.cpp
client/libs/plugin-sdk/: CMakeLists.txt
client/libs/stores/: CMakeLists.txt
client/libs/stores/include/stores/: friend_store.h  login_store.h
client/libs/stores/src/: friend_store.cpp  login_store.cpp
client/libs/ui/: CMakeLists.txt
client/libs/ui/include/ui/: login_widget.h  main_window.h
client/libs/ui/src/: login_widget.cpp  main_window.cpp
client/plugins/chat/: manifest.json
client/plugins/chat/include/chat/: chat_plugin.h
client/tests/integration/: tst_login_flow.cpp
client/tests/unit/: tst_core.cpp  tst_stores.cpp
cmake/presets/: win64-mingw.json
libs/: CMakeLists.txt  config.json
libs/network/: CMakeLists.txt
libs/network/include/: GatewayConfig.h  HttpClient.h  network_global.h
libs/network/src/: GatewayConfig.cpp  HttpClient.cpp
libs/stores/login/: CMakeLists.txt
libs/stores/login/include/login/: LoginStore.h  login_store.h  stores_login_globa.h
libs/stores/login/src/: LoginStore.cpp  login_store.cpp
libs/ui/: CMakeLists.txt
libs/ui/login/: CMakeLists.txt
libs/ui/login/include/controllers/: LoginController.h  login_controller.h
libs/ui/login/include/models/: UserModel.h  user_model.h
libs/ui/login/qml/: qmldir
libs/ui/login/qml/components/: InputLine.qml  LoginButton.qml  LoginInput.qml  LoginTitleBar.qml  RoundedImage.qml
libs/ui/login/qml/views/: LoginView.qml
libs/ui/login/src/controllers/: LoginController.cpp  login_controller.cpp
libs/ui/login/src/models/: UserModel.cpp  user_model.cpp
libs/ui/main/: CMakeLists.txt  Main.qml
libs/ui/mainWindow/: CMakeLists.txt
libs/ui/mainWindow/qml/components/: MainTitleBar.qml
libs/ui/mainWindow/qml/view/: MainView.qml
libs/ui/publicComponent/: CMakeLists.txt
libs/ui/publicComponent/qml/: WindowBehavior.qml
plugins/: CMakeLists.txt
plugins/chat/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
(+784 files in other folders)
